# Hitechlab_humanoid

./: README.md  UXA_cmds
beginner_tutorials/: CMakeLists.txt~
nimbro/behaviour/behaviour_exercise/: CMakeLists.txt  package.xml
qdude/: CMakeLists.txt  mainpage.dox  package.xml  qdude_ui.files
qdude/include/qdude/: main_window.hpp  qnode.hpp
qdude/src/: main.cpp  main_window.cpp  qnode.cpp
qdude/ui/: main_window.ui
uxa_balltracking/: CMakeLists.txt  package.xml
uxa_balltracking/src/: main.cpp
uxa_core/: CMakeLists.txt  UXA_CORE.files  package.xml
uxa_core/scripts/: uxa_core.py
uxa_dashboard/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  package.xml  qrc_images.cxx  ui_main_window.h  uxa_dashboard_ui.files  uxa_dashboard_ui.includes
uxa_dashboard/include/uxa_dashboard/: main_window.hpp  moc_main_window.cxx  moc_main_window.cxx_parameters  moc_qnode.cxx  moc_qnode.cxx_parameters  qnode.hpp
uxa_dashboard/src/: main.cpp  main_window.cpp  qnode.cpp
uxa_dashboard/ui/: main_window.ui  ui_main_window.h
uxa_msgs/uxa_sam_msgs/: CMakeLists.txt  package.xml  std_position_move.msg~
uxa_msgs/uxa_sam_msgs/msg/: position_move.msg  sam_state.msg
uxa_msgs/uxa_serial_msgs/: CMakeLists.txt  package.xml
uxa_msgs/uxa_serial_msgs/msg/: receive.msg  transmit.msg
uxa_msgs/uxa_uic_msgs/: CMakeLists.txt  package.xml
uxa_msgs/uxa_uic_msgs/msg/: motion.msg  remocon.msg
uxa_sam_driver/: CMakeLists.txt  UXA_SAM_DRIVER.files  package.xml
uxa_sam_driver/include/: sam_packet.h  uxa_sam_driver.h
uxa_sam_driver/src/: sam_packet.cpp  uxa_sam_driver.cpp
uxa_serial/: CMakeLists.txt  UXA_SERIAL.files  package.xml
uxa_serial/include/: uxa_serial.h
uxa_serial/src/: uxa_serial.cpp
uxa_system_launch/: CMakeLists.txt  package.xml
uxa_system_launch/launch/: uxa_balltracking.launch  uxa_dashboard.launch  uxa_dashboard.launch.bk  uxa_system.launch
uxa_uic_driver/: CMakeLists.txt  UXA_UIC_DRIVER.files  package.xml
uxa_uic_driver/include/: uic_packet.h  uxa_uic_driver.h
uxa_uic_driver/src/: uic_packet.cpp  uxa_uic_driver.cpp
