<?xml version="1.0"?>
<package>
  <name>uxa_balltracking</name>
  <version>0.0.0</version>
  <description>The uxa_balltracking package</description>

  <maintainer email="90kwkw@gmail.com">minki son</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uxa_uic_msgs</build_depend>
  <build_depend>uxa_sam_msgs</build_depend>



  <run_depend>cv_bridge</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uxa_uic_msgs</run_depend>
  <run_depend>uxa_sam_msgs</run_depend>


  <export>

  </export>
</package>
