<?xml version="1.0"?>
<package>
  <name>uxa_core</name>
  <version>0.0.0</version>
  <description>The uxa_core package</description>

  <maintainer email="90kwkw@gmail.com">minki son</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>


  <export>

  </export>
</package>
