<?xml version="1.0"?>
<package>
  <name>uxa_dashboard</name>
  <version>0.1.0</version>
  <description>

     uxa_dashboard

  </description>
  <maintainer email="90kwkw@gmail.com">minki son</maintainer>
  <author>root</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>uxa_uic_msgs</build_depend>
  <build_depend>uxa_sam_msgs</build_depend>
  <build_depend>uxa_serial_msgs</build_depend>
  <build_depend>std_msgs </build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>uxa_uic_msgs</run_depend>
  <run_depend>uxa_sam_msgs</run_depend>
  <run_depend>uxa_serial_msgs</run_depend>
  <run_depend>std_msgs </run_depend>
  <run_depend>sensor_msgs</run_depend>
 
</package>
