<?xml version="1.0"?>
<package>
  <name>uxa_serial</name>
  <version>1.0.0</version>
  <description>The uxa_serial package</description>
  <maintainer email="90kwkw@gmail.com">minki son</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uxa_serial_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>uxa_serial_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <export>

  </export>
</package>
