<?xml version="1.0"?>
<package>
  <name>uxa_uic_msgs</name>
  <version>1.0.0</version>
  <description>The uxa_uic_msgs package</description>

  <maintainer email="90kwkw@gmail.com">minki son</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

  <export>

  </export>
</package>
